change docs and login handler
